# social-media-extractor

./: .coverage  .env  .gitignore  Makefile  README.md  pyproject.toml
data/cnn/: tags.txt
data/cnn/headlines/ataque/: headlines-20230625132504.json
data/cnn/headlines/ataque-a-escolas/: headlines-20230625132456.json
data/cnn/headlines/ataque-aos-tres-poderes/: headlines-20230625132543.json
data/cnn/headlines/ataque-cibernetico/: headlines-20230625132549.json
data/cnn/headlines/crime/: headlines-20230625132416.json
data/cnn/headlines/fraude/: headlines-20230625132832.json
data/cnn/headlines/hacker/: headlines-20230625132612.json
data/cnn/headlines/hackers/: headlines-20230625132617.json
data/cnn/headlines/policia-federal/: headlines-20230625132829.json
data/cnn/headlines/policia-federal-pf/: headlines-20230625132815.json
data/cnn/headlines/policial/: headlines-20230625132356.json
data/cnn/headlines/prisao/: headlines-20230625132603.json
data/cnn/headlines/tiroteio/: headlines-20230625132427.json
data/cnn/headlines/violencia/: headlines-20230625132455.json
data/cnn/news/something-something/: news-20230625135216.json
src/: main.py  schemas.py  utils.py
src/collectors/: cnn.py
src/models/: main.ipynb
test-reports/: coverage.xml  report.xml
tests/: test_cnn_extractor.py
