[tool.poetry]
name = "social-media-criminal-data"
version = "0.1.0"
description = ""
authors = ["Leonardo Silva <leeosilva0909@gmail.com>"]
readme = "README.md"
packages = [{ include = "social_media_criminal_data" }]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.2"
numpy = "^1.24.3"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
